# aiogram3

./: .gitignore
aiogram-webhooks-1/: .env.example  README.md  config.py  main.py  pyproject.toml
aiogram-webhooks-1/handlers/: common.py
aiogram-webhooks-1/middlewares/: __init__.py  gemini.py  polling_log.py  throttle.py
aiogram-webhooks-1/services/: gemini.py  logging_session.py
crypto_alerts_bot_v1/: README.md  config.py  database.py  handlers.py  keyboards.py  main.py  pyproject.toml  services.py
lesson_1/: README.md  main.py
lesson_2/: .env.example  README.md  handlers.py  main.py
lesson_3/: .env.example  README.md  handlers.py  keyboards.py
lesson_4/: README.md  handlers.py  keyboards.py  states.py
lesson_5/: README.md  crypto_bot.db  database.py  handlers.py  keyboards.py  main.py  pyproject.toml  services.py
lesson_prod_ready/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
lesson_prod_ready/app/: __init__.py  app.py  config.py
lesson_prod_ready/app/bot/: __init__.py
lesson_prod_ready/app/bot/handlers/: __init__.py  expenses.py  start.py
lesson_prod_ready/app/bot/keyboards/: __init__.py
lesson_prod_ready/app/bot/middlewares/: uow.py
lesson_prod_ready/app/domain/: __init__.py  models.py  repositories.py
lesson_prod_ready/app/infrastructure/: repositories.py  unit_of_work.py
lesson_prod_ready/app/infrastructure/db/: mappers.py  session.py  tables.py
lesson_prod_ready/app/services/: __init__.py  contracts.py  dto.py  user_service.py
lesson_webhooks_1/: .dockerignore  .env.example  README.md  main.py
(+7 files in other folders)
